# SpiceCompose

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
.cargo/: config.toml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/org/cf0x/spicecompose/: MainActivity.kt
androidApp/src/main/res/values/: strings.xml  themes.xml
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/org/cf0x/spicecompose/: Platform.android.kt
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-fr/: strings.xml
composeApp/src/commonMain/composeResources/values-ja/: strings.xml
composeApp/src/commonMain/composeResources/values-ko/: strings.xml
composeApp/src/commonMain/composeResources/values-zh/: strings.xml
composeApp/src/commonMain/composeResources/values-zh-rTW/: strings.xml
composeApp/src/commonMain/kotlin/org/cf0x/spicecompose/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonTest/kotlin/org/cf0x/spicecompose/: ComposeAppCommonTest.kt
composeApp/src/desktopMain/kotlin/org/cf0x/spicecompose/: main.kt
composeApp/src/jvmMain/kotlin/org/cf0x/spicecompose/: Platform.jvm.kt  main.kt
composeApp/src/wasmJsMain/kotlin/org/cf0x/spicecompose/: Platform.wasm.kt  main.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust-backend/: Cargo.toml  build_android.ps1
rust-backend/src/: api.rs  jni_bridge.rs  lib.rs  main.rs  rc4.rs  spice.rs
(+221 files in other folders)
